--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 }
 
 .Title2 {
-  font-family:'Brush Script MT', cursive;
+  font-family: Verdana, sans-serif;
   color:#000000;
   font-size:32px;
 }
@@ -61,6 +61,19 @@ body {
   margin:10px;
 
   font-family:'Brush Script MT', cursive;
+  color:#000000;
+  font-size:48px;
+}
+
+.Button2 {
+  background-color: #FFB2D0;
+  padding: 10px;
+  border-radius: 5px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  margin:10px;
+
+  font-family: Verdana, sans-serif;
   color:#000000;
   font-size:48px;
 }
