--- a/style.css
+++ b/style.css
@@ -18,7 +18,17 @@ body {
   display: inline;
 }
 
+.FadeInPicture1 {
+  opacity: 0;
+  animation: fadeIn 2s forwards;
+
+  width: "250px";
+  height: "auto";
+  display: inline;
+}
+
 #s0 {animation-delay: 0s;}
+#s1 {animation-delay: 1s;}
 #s2 {animation-delay: 2s;}
 #s4 {animation-delay: 4s;}
 #s6 {animation-delay: 6s;}
@@ -93,8 +103,8 @@ body {
 
 .StoryText1 {
   opacity: 0;
-  animation: fadeIn 2s forwards;
-  
+  animation: fadeIn 3s forwards;
+
   font-family: Verdana, sans-serif;
   color:#000000;
   font-size:24px;
